--- a/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionc54c3b1d": {
+    "LambdaLayerVersioncf30ae89": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretadynamodb-LambdaLayerVersionc54c3b1d-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-07-26T02:46:51.509Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretadynamodb-${env}",
@@ -47,21 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivatec54c3b1d": {
+    "LambdaLayerPermissionPrivatecf30ae89": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretadynamodb-prod:25",
-        "Principal": {
-          "Ref": "AWS::AccountId"
-        }
-      }
-    },
-    "LambdaLayerPermissionPrivateLegacy9": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretadynamodb-prod:9",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersioncf30ae89"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -71,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionc54c3b1d"
+        "Ref": "LambdaLayerVersioncf30ae89"
       }
     }
   }
