--- a/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "Lambda layer resource stack creation using Amplify CLI",
+  "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"12.1.1\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,7 +20,7 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion79bf8e1c": {
+    "LambdaLayerVersion9e3412ae": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
         "CompatibleRuntimes": {
@@ -51,12 +51,12 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPublic79bf8e1c": {
+    "LambdaLayerPermissionPublic9e3412ae": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion79bf8e1c"
+          "Ref": "LambdaLayerVersion9e3412ae"
         },
         "Principal": "*"
       }
@@ -65,7 +65,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion79bf8e1c"
+        "Ref": "LambdaLayerVersion9e3412ae"
       }
     }
   }
