removed dev from team provider

--- a/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"12.1.1\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
+  "Description": "Lambda layer resource stack creation using Amplify CLI",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,7 +20,7 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion9e3412ae": {
+    "LambdaLayerVersion3b3acb0e": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
         "CompatibleRuntimes": {
@@ -51,12 +51,12 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPublic9e3412ae": {
+    "LambdaLayerPermissionPublic3b3acb0e": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion9e3412ae"
+          "Ref": "LambdaLayerVersion3b3acb0e"
         },
         "Principal": "*"
       }
@@ -65,7 +65,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion9e3412ae"
+        "Ref": "LambdaLayerVersion3b3acb0e"
       }
     }
   }
