--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "4.3.3",
-    "@aws-sdk/client-ssm": "3.370.0",
+    "@aws-sdk/client-dynamodb": "3.294.0",
+    "@aws-sdk/client-s3": "3.294.0",
+    "@aws-sdk/client-ssm": "3.294.0",
+    "@aws-sdk/lib-dynamodb": "3.294.0",
+    "@aws-sdk/util-dynamodb": "3.294.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.11.0",
@@ -13,10 +17,11 @@
     "@stripe/react-stripe-js": "2.1.1",
     "@stripe/stripe-js": "1.54.1",
     "@tanstack/react-query": "4.32.0",
+    "@types/uuid": "^9.0.2",
     "aws-amplify": "5.0.8",
     "axios": "1.4.0",
     "lodash": "4.17.21",
-    "loglevel": "1.8.1",
+    "loglevel": "^1.8.1",
     "next": "13.1.6",
     "node-cache": "5.1.2",
     "react": "18.2.0",
@@ -25,9 +30,11 @@
     "socketio": "1.0.0",
     "stripe": "12.13.0",
     "typescript": "4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "2.1.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-api-gateway": "3.294.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
