--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/client-ssm": "3.294.0",
     "@aws-sdk/lib-dynamodb": "3.294.0",
     "@aws-sdk/util-dynamodb": "3.294.0",
+    "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.11.0",
